crates/config/macros/__broken_tests/ui/fail/merge/union.stderr
error: merge trait for unions will never be supported
  --> tests/ui/fail/merge/union.rs:24:1
   |
24 | union MyUnion {
   | ^^^^^
